# Combat

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: cmake.yml
src/: CMakeLists.txt  hello.cpp  hello.h  main.cpp
src/Objects/: Armor.cpp  Armor.h  Axe.cpp  Axe.h  Buckler.cpp  Buckler.h  CMakeLists.txt  GreatSword.cpp  GreatSword.h  Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  Sword.cpp  Sword.h
src/Objects/Attack/: Axe.cpp  Axe.h  CMakeLists.txt  GreatSword.cpp  GreatSword.h  Sword.cpp  Sword.h
src/Objects/Defense/: Armor.cpp  Armor.h  Buckler.cpp  Buckler.h  CMakeLists.txt
src/Traits/: CMakeLists.txt  Trait.cpp  Trait.h  TraitFactory.cpp  TraitFactory.h
src/Traits/Bonus/: CMakeLists.txt  Veteran.cpp  Veteran.h  Vicious.cpp  Vicious.h
src/Warriors/: CMakeLists.txt  Highlander.cpp  Highlander.h  Swordsman.cpp  Swordsman.h  Viking.cpp  Viking.h  Warrior.cpp  Warrior.h
test/: CMakeLists.txt  tests.cpp
test/FunctionnalTests/: FunctionalTests.cpp
test/UnitTests/Objects/: ObjectsTests.cpp
test/UnitTests/Traits/: TraitsTests.cpp
test/UnitTests/Warriors/: WarriorsTests.cpp
